--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@tailwind components;
+@layer components {
+  .button {
+    @apply rounded-full shadow-md py-2 px-4 border-2 transition hover:translate-y-1 ease-in-out duration-300;
+  }
+}
